# Cu-Collision-Detection

./: .gitignore  CMakeLists.txt  main.cu
bindings/: CMakeLists.txt  pycol.cu
include/: CollisionSystem.cuh  Collisions.cuh  Utils.cuh
src/: CollisionSystem.cu  Collisions.cu
tests/: test.cu  testSystemHeuristic.cu  testSystemHeuristic.cuh
